--- a/src/package.json
+++ b/src/package.json
@@ -4,14 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "install": "cd client && npm run build",
-    "heroku-prebuild": "npm install",
-    "heroku-postbuild": "cd client && npm install && npm run build"
-  },
-  "engines": {
-    "node": "^10.3.0", 
-    "npm": "^6.8.0" 
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
